# src_platform_clip-install-gui

./: AUTHORS  CHANGELOG  Makefile.in  README.md  configure  configure.ac
scripts/: Makefile.in  clip-list-install-disks  clip-postinst-audit  clip-postinst-devices  clip-postinst-download  clip-postinst-netconst  clip-postinst-network  clip-postinst-user
src/: Makefile.in  frmInstMain.cpp  frmInstMain.h  frmPassword.cpp  frmPassword.h  install-gui.cpp
